[Feature #163335030] Create candidates page to view all candidates

--- a/UI/html/user.html
+++ b/UI/html/user.html
@@ -211,6 +211,138 @@
                         </div>
                     </div>
                 </div>
+                <section class="food-item" id="menu">
+                        <h1 class="process"> <i class="fas fa-utensils"></i>Candidates</h1>
+                        <div class="wrapper-menu">
+                            <hr>
+                            <section class="menu-card-list">
+                                <div class="card">
+                                    <img src="./assets/images/friedchicken.png">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                        <h3 id="price"></h3>
+                                        <button id="cart" onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="./assets/images/salad.png">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                        <h3 id="price"></h3>
+                                        <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="./assets/images/assorted.png">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                        <h3 id="price"></h3>
+                                        <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="./assets/images/chips.jpeg">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                        <h3 id="price"></h3>
+                                        <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="./assets/images/spicy-chicken-burger.png">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                        <h3 id="price"></h3>
+                                        <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                    </div>
+                                </div>
+                            </section>
+                            <section class="menu-card-list">
+                                <div class="card">
+                                    <img src="./assets/images/grilled_fish.png">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                            <h3></h3>
+                                            <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="./assets/images/Ribs-on-Grill-with-Basting-Brush-.png">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                        <h3></h3>
+                                        <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="./assets/images/jollofrice.jpg">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                        <h3 id="price"></h3>
+                                        <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="./assets/images/whitericesauce.png">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                        <h3 id="price"></h3>
+                                        <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Order</button>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <img src="./assets/images/informatin-nigeria-amala.jpeg">
+                                    <div class="card-details">
+                                        <h3></h3>
+                                        <h3 id="price"></h3>
+                                        <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Order</button>
+                                    </div>
+                                </div>
+                            </section>
+                            <section class="menu-card-list">
+                                    <div class="card">
+                                        <img src="./assets/images/friedchicken.png">
+                                        <div class="card-details">
+                                            <h3></h3>
+                                            <h3></h3>
+                                            <button id="cart" onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <img src="./assets/images/salad.png">
+                                        <div class="card-details">
+                                            <h3></h3>
+                                            <h3 id="price"></h3>
+                                            <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <img src="./assets/images/assorted.png">
+                                        <div class="card-details">
+                                            <h3></h3>
+                                            <h3 id="price"></h3>
+                                            <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <img src="./assets/images/chips.jpeg">
+                                        <div class="card-details">
+                                            <h3></h3>
+                                            <h3 id="price"></h3>
+                                            <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                        </div>
+                                    </div>
+                                    <div class="card">
+                                        <img src="./assets/images/spicy-chicken-burger.png">
+                                        <div class="card-details">
+                                            <h3></h3>
+                                            <h3 id="price"></h3>
+                                            <button onclick="document.getElementById('signupform').style.display='block'" style="width:auto;">Vote</button>
+                                        </div>
+                                    </div>
+                                </section>
+                        </div>
+                    </section>
                 <div id="alloffices"></div>
                 <div></div>
 
