[Feature #163545933] Fix the modal colors and links

--- a/UI/html/index.html
+++ b/UI/html/index.html
@@ -35,10 +35,8 @@
       <section>
             <div id="signinform" class="modal">
                 <form class="modal-content animate" action="profile.html">
-                        <div class="modal-container signup-div" style="background-color:#1c91f0">
-                                <span class="psw">Don't have an account yet?
-                                    <a href="#">Sign Up!</a>
-                                </span>
+                        <div class="modal-container signup-div" style="background-color: white">
+                                
                             </div>
                     <div class="imgcontainer">
                         <span onclick="document.getElementById('signinform').style.display='none'" class="close" title="Close Modal">&times;</span>
@@ -79,6 +77,10 @@
                 <form class="modal-content animate" action="signup.html">
                     <div class="imgcontainer">
                         <span onclick="document.getElementById('signupform').style.display='none'" class="close" title="Close Modal">&times;</span>
+                    </div>
+
+                    <div style="text-align: center;">
+                        <strong><h3>Registration</h3></strong>
                     </div>
     
                     <div class="modal-container">
