[Feature #163545933] Implement feedback received on admin dashboards

--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -19,7 +19,7 @@
             </h1>
             <nav>
                 <ul>
-                    <li><a href="./index.htnl" class="link">Home</a></li>
+                    <li><a href="./index.html" class="link">Home</a></li>
                     <li><a href="#features" class="link">Admin Dashboard</a></li>
                     <button class="signinform signin link" id="signin" class="header-login signup" onclick="document.getElementById('signinform').style.display='block'"
                         style="width:auto;">Logout</button>
@@ -32,6 +32,7 @@
             <section class="panel">
                 <div class="nav">
                     <div class="navbar">
+                        <div id="admin-operations"><h1> Admin Operations</h1></div>
                         <ul>
                             <li><a href="#" id="parties"> <i class="far fa-handshake"></i> All Parties</a></li>
                             <li><a href="#" id="party-link"> <i class="fas fa-plus-circle"></i> Create Party</a></li>
@@ -125,7 +126,7 @@
                                     </div>
                                     <div class="Rtable-cell topic-cell">
                                         <div class="Rtable-cell--heading">Headquarters</div>
-                                        <div class="Rtable-cell--content title-content"> 6 Ceddi Plaza Abuja</div>
+                                        <div class="Rtable-cell--content title-content">6 Ceddi Plaza Abuja</div>
                                     </div>
                                     <div class="Rtable-cell replay-link-cell">
                                         <div class="Rtable-cell--heading">Logo</div>
@@ -151,7 +152,7 @@
                                     </div>
                                     <div class="Rtable-cell topic-cell">
                                         <div class="Rtable-cell--heading">Headquarters</div>
-                                        <div class="Rtable-cell--content title-content"> 6 Ceddi Plaza Abuja</div>
+                                        <div class="Rtable-cell--content title-content">6 Ceddi Plaza Abuja</div>
                                     </div>
                                     <div class="Rtable-cell replay-link-cell">
                                         <div class="Rtable-cell--heading">Logo</div>
