[Feature #163545933] Implement feedback received on admin dashboards

--- a/UI/html/user.html
+++ b/UI/html/user.html
@@ -341,28 +341,29 @@
             </section>
         </div>
     </main>
+    <div>
+            <footer>
+                <small>&copy; 2019 Politica</small>
+                <nav>
+                    <ul class="footer-main">
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">About</a>
+                        </li>
+                        <li>
+                            <a href="#">Support</a>
+                        </li>
+                        <li>
+                            <a href="admin.html">Admin</a>
+                        </li>
+                    </ul>
+                </nav>
+            </footer>
+        </div>
+
+    <script src="../js/user.js"></script>
+
 </body>
-
-<div>
-    <footer>
-        <small>&copy; 2019 Politica</small>
-        <nav>
-            <ul class="footer-main">
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Support</a>
-                </li>
-                <li>
-                    <a href="admin.html">Admin</a>
-                </li>
-            </ul>
-        </nav>
-    </footer>
-</div>
-
 </html>
