[Feature #163569749] Implement responsiveness for all devices with different width

--- a/UI/html/user.html
+++ b/UI/html/user.html
@@ -344,17 +344,34 @@
                     </div>
                 </div>
                 <div id="offices-details">
-                    <div class="presidential">
-
+                    <div class="office-card">
+                            <section class="card-candidate ">
+                                    <div class="card--content"></div>
+                                    <div class="card--content"></div>
+                                    <div class="card--content"></div>
+                                  </section>
                     </div>
-
-                    <div class="Legislative">
-
+                    <!-- <div class="office-card">
+                        <section class="card-candidate">
+                            <div class="-candidate--content"></div>
+                            <div class="-candidate--content"></div>
+                            <div class="card--content"></div>
+                        </section>
                     </div>
-
-                    <div class="gubernatorial">
-
+                    <div class="office-card">
+                        <div class="card-candidate">
+                            <div class="card--content"></div>
+                            <div class="card--content"></div>
+                            <div class="card--content"></div>
+                        </div>
                     </div>
+                    <div class="office-card">
+                        <div class="card-candidate">
+                            <div class="card--content"></div>
+                            <div class="card--content"></div>
+                            <div class="card--content"></div>
+                        </div>
+                    </div> -->
                 </div>
             </section>
         </div>
