feat(feedback/candidate page ): Implement feedback and add candidates page for voting -Ensure responsivess -add page for user to vote for candidates [Delivers #163569749] [Delivers ##163334980]

--- a/UI/html/user.html
+++ b/UI/html/user.html
@@ -51,7 +51,6 @@
                                 <li><a href="#" id="offices"> <i class="far fa-handshake"></i>View Offices</a></li>
                                 <li><a href="#" id="office-link"> <i class="fas fa-paste"></i> My Votes</a> </li>
                                 <li><a href="#" id="party-link"> <i class="fas fa-plus-circle"></i> Interest Form</a></li>
-
                             </ul>
                         </div>
                     </div>
@@ -343,35 +342,92 @@
                         </div>
                     </div>
                 </div>
-                <div id="offices-details">
-                    <div class="office-card">
-                            <section class="card-candidate ">
-                                    <div class="card--content"></div>
-                                    <div class="card--content"></div>
-                                    <div class="card--content"></div>
-                                  </section>
-                    </div>
-                    <!-- <div class="office-card">
-                        <section class="card-candidate">
-                            <div class="-candidate--content"></div>
-                            <div class="-candidate--content"></div>
-                            <div class="card--content"></div>
+                <div id="offices-details" class="vote-office">
+                    <div class="office-content">
+                        <span class="close">&times;</span>
+                        <section class="office-item">
+                            <div class="wrapper-office">
+                                <section class="menu-card-list">
+                                        <h5 class="card-header">Presidential Candidates</h5>
+                                    <div class="card-office">
+                                        <img src="../img/Fela-Durotoye.jpg">
+                                        <div class="card-details">
+                                            <div class="name"><strong>Fela Durotoye</strong></div>
+                                            <div class="party">Alliance Action of Nigeria(AAN)</div>
+                                            <button>VOTE</button>
+                                        </div>
+                                    </div>
+                                    <div class="card-office">
+                                        <img src="../img/Kingsley-Moghalu.jpg">
+                                        <div class="card-details">
+                                                <div class="name"><strong>Kingsley Moghalu</strong></div>
+                                                <div class="party">Young Professional Pary(YPP)</div>
+                                            <button>VOTE</button>
+                                        </div>
+                                    </div>
+                                    <div class="card-office">
+                                        <img src="../img/Atiku-Abubakar.jpg">
+                                        <div class="card-details">
+                                                <div class="name"><strong>Atiku Abubakar</strong></div>
+                                                <div class="party">Peoples Democratic Party</div>
+                                            <button>VOTE</button>
+                                        </div>
+                                    </div>
+                                    <div class="card-office">
+                                        <img src="../img/President-Buhari-Photo-LTV.jpg">
+                                        <div class="card-details">
+                                                <div class="name"><strong>Muhammed Buhari</strong></div>
+                                                <div class="party">All Progressives Congress</div>
+                                            <button>VOTE</button>
+                                        </div>
+                                    </div>
+                                </section>
+                            </div>
                         </section>
+
+                        <section class="office-item">
+                                <div class="wrapper-office">
+                                    <section class="menu-card-list">
+                                            <h5 class="card-header">Gubernatorial Candidates</h5>
+                                        <div class="card-office">
+                                            <img src="../img/jimiagbaje.jpeg">
+                                            <div class="card-details">
+                                                <div class="name"><strong>Jimi Agabje</strong></div>
+                                                <div class="party">Peoples Democratic Party</div>
+                                                <button>VOTE</button>
+                                            </div>
+                                        </div>
+                                        <div class="card-office">
+                                            <img src="../img/gbadamosi.jpeg">
+                                            <div class="card-details">
+                                                    <div class="name"><strong>Babatunde Gbadamosi</strong></div>
+                                                    <div class="party">Action Democratic Pary(ADP)</div>
+                                                <button>VOTE</button>
+                                            </div>
+                                        </div>
+                                        <div class="card-office">
+                                            <img src="../img/sanwo.jpg">
+                                            <div class="card-details">
+                                                    <div class="name"><strong>Babatunde Sanwo-Olu</strong></div>
+                                                    <div class="party">All Progressives Party</div>
+                                                <button>VOTE</button>
+                                            </div>
+                                        </div>
+                                        <div class="card-office">
+                                            <img src="../img/Owolabi-Salis.jpg">
+                                            <div class="card-details">
+                                                    <div class="name"><strong>Owolabi Salis</strong></div>
+                                                    <div class="party">Alliance For Democracy(AD)</div>
+                                                <button>VOTE</button>
+                                            </div>
+                                        </div>
+                                    </section>
+                                </div>
+                            </section>
+
+                        
+                        
                     </div>
-                    <div class="office-card">
-                        <div class="card-candidate">
-                            <div class="card--content"></div>
-                            <div class="card--content"></div>
-                            <div class="card--content"></div>
-                        </div>
-                    </div>
-                    <div class="office-card">
-                        <div class="card-candidate">
-                            <div class="card--content"></div>
-                            <div class="card--content"></div>
-                            <div class="card--content"></div>
-                        </div>
-                    </div> -->
                 </div>
             </section>
         </div>
