--- a/UI/index.html
+++ b/UI/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Politica</title>
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
 </head>
@@ -374,6 +374,9 @@
                     </li>
                     <li>
                         <a href="admin.html">Admin</a>
+                    </li>
+                    <li>
+                        <a href="user.html">User</a>
                     </li>
                 </ul>
             </nav>
