--- a/UI/html/admin.html
+++ b/UI/html/admin.html
@@ -31,12 +31,12 @@
         <div class="flex-container">
             <section class="panel">
                 <div class="nav">
-                    <div class="navbar">
+                    <div class="navbar" >
                         <div id="admin-operations"><h1> Admin Operations</h1></div>
-                        <ul>
-                            <li><a href="#" id="parties"> <i class="far fa-handshake"></i> All Parties</a></li>
-                            <li><a href="#" id="party-link"> <i class="fas fa-plus-circle"></i> Create Party</a></li>
-                            <li><a href="#" id="office-link"> <i class="fas fa-paste"></i> Create Office</a> </li>
+                        <ul id="board">
+                            <li class="link active"><a href="#" id="parties"> <i class="far fa-handshake"></i> All Parties</a></li>
+                            <li class="link"><a href="#" id="party-link"> <i class="fas fa-plus-circle"></i> Create Party</a></li>
+                            <li class="link"><a href="#" id="office-link"> <i class="fas fa-paste"></i> Create Office</a> </li>
                         </ul>
                     </div>
 
